<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="304dp"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="186dp"
        android:contentDescription="@string/imageView"
        android:src="@drawable/version_updating" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cart_bottom"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/newVersionFound"
            android:textColor="#ff575757"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="19dp"
            android:layout_marginRight="24dp"
            android:textColor="#ff575757"
            android:textSize="@dimen/sp_14"
            tools:text="1.APP启动速度性能提升，体验更流畅。" />

        <TextView
            android:id="@+id/upgradeBtn"
            android:layout_width="107dp"
            android:layout_height="28dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="33dp"
            android:layout_marginBottom="@dimen/dp_40"
            android:background="@drawable/b_14100e_r8"
            android:gravity="center"
            android:text="@string/upgradeImmediately"
            android:textColor="#ffebc06f"
            android:textSize="15sp" />

    </LinearLayout>

</LinearLayout>
