<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".commodity.CommodityDetailsActivity">

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/refreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srlEnablePreviewInEditMode="true">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </com.scwang.smartrefresh.layout.SmartRefreshLayout>

    <include layout="@layout/commodity_details_toolbar" />

    <LinearLayout
        android:id="@+id/store"
        android:layout_width="50dp"
        android:layout_height="49dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:contentDescription="@string/imageView"
            android:src="@drawable/store"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/store"
            android:textColor="#ff333333"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/customerService"
        android:layout_width="50dp"
        android:layout_height="49dp"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/store"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:contentDescription="@string/imageView"
            android:src="@drawable/customer_service"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/store"
            android:textColor="#ff333333"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/shoppingTrolley"
        android:layout_width="50dp"
        android:layout_height="49dp"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/customerService"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:contentDescription="@string/imageView"
            android:src="@drawable/shopping_trolley"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/shoppingTrolley"
            android:textColor="#ff333333"
            android:textSize="10sp"
            tools:ignore="SmallSp" />

    </LinearLayout>

    <Button
        android:id="@+id/joinShoppingTrolley"
        android:layout_width="112.5dp"
        android:layout_height="49dp"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/shoppingTrolley"
        android:background="@drawable/graduated_orange"
        android:text="@string/joinShoppingTrolley"
        android:textColor="#ff333333"
        android:textSize="15sp">

    </Button>

    <Button
        android:id="@+id/buyNow"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/joinShoppingTrolley"
        android:background="#FF14100E"
        android:text="@string/buyNow"
        android:textColor="#ffd0a147"
        android:textSize="15sp">

    </Button>


</RelativeLayout>
